# agentforge

./: .gitignore  Cargo.toml  README.md  eslint.config.mjs  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: error.rs
crates/core/src/database/: connection.rs  folder.rs  mod.rs  prompt.rs  schema.rs  settings.rs  skill.rs
crates/core/src/models/: folder.rs  mod.rs  prompt.rs  settings.rs  skill.rs
crates/core/src/services/: mod.rs  platforms.rs  security.rs  skill_validator.rs  webdav.rs
scripts/: update-homebrew-cask.sh
src/: App.tsx  main.tsx
src-cli/: Cargo.toml
src-cli/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  setup.rs  state.rs
src-tauri/src/commands/: backup.rs  folder.rs  image.rs  mod.rs  platform.rs  prompt.rs  security.rs  settings.rs  skill.rs  webdav.rs
src/components/: UpdateDialog.tsx
src/constants/: index.ts  platforms.ts  skill-registry.ts
src/hooks/: useModuleTags.ts  usePromptMediaManager.ts  useSmoothStream.ts  useTableConfig.ts  useWebDAVSync.ts
src/i18n/: index.ts
src/services/: database-backup.ts  seedData.ts  settings-snapshot.ts  skill-filter.ts  skill-normalize.ts  skill-platform-sync.ts  tauri-api.ts  webdav-sync.ts
src/stores/: folder.store.ts  index.ts  navigation.store.ts  prompt.store.ts  settings.store.ts  skill.store.ts
(+112 files in other folders)
