[package]
name = "agentforge-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
log = "0.4"
regex = "1"
once_cell = "1"
dirs = "6"
reqwest = { version = "0.12", features = ["default-tls"] }
base64 = "0.22"
scrypt = "0.11"
aes-gcm = "0.10"
rand = "0.8"
subtle = "2"

[dev-dependencies]
tempfile = "3"
